daemonset.yaml
apiVersion: apps/v1 
kind: DaemonSet
metadata:
  name: mydaemon
spec:
  selector:
    matchLabels:
     app: myd
  template:
     metadata:
       labels: 
         app: myd
     spec: 
       containers:
       - name: con1
         image: nginx:latest
         ports:
         - containerPort: 80
