node-aff-prefer.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: myrs
  name: podaff-pref
spec:
  containers:
  - image: nginx:latest
    name: con1
    ports:
    - containerPort: 80
  affinity:
    nodeAffinity:
      preferredDuringSchedulingIgnoredDuringExecution:
      - weight: 1
        preference:
          matchExpressions:
          - key: cpu
            operator: NotIn
            values:
            - ryzen
