node-aff-req.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: myrs
  name: podaff-req
spec:
  containers:
  - image: nginx:latest
    name: con1
    ports:
    - containerPort: 80
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: cpu
            operator: NotIn
            values:
            - ryzen
