node-name.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: myrs
  name: pod-node
spec:
  containers:
  - image: nginx:latest
    name: con1
    ports:
    - containerPort: 80
  nodeName: node3
