pod-aff-pref.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: myrs
  name: pod-node
spec:
  containers:
  - image: nginx:latest
    name: con1
    ports:
    - containerPort: 80
  affinity:
    podAntiAffinity:  # affinity and antiaffinity define here <<< 
      preferredDuringSchedulingIgnoredDuringExecution:
      - weight: 100
        podAffinityTerm:
          labelSelector:
            matchExpressions:
            - key: app
              operator: In
              values:
              - mango
          topologyKey: kubernetes.io/hostname
