pod-aff-req.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: myrs
  name: pod-req
spec:
  containers:
  - image: nginx:latest
    name: con1
    ports:
    - containerPort: 80
  affinity:
    podAntiAffinity:  # affinity and antiaffinity define here <<< 
      requiredDuringSchedulingIgnoredDuringExecution:
      - labelSelector:
          matchExpressions:
          - key: app
            operator: In
            values:
            - mango
        topologyKey: kubernetes.io/hostname
