pvc-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: mango
  name: pvc-pod
spec:
  containers:
  - image: nginx:latest
    name: con1
    ports:
    - containerPort: 80
    volumeMounts:
    - name: myvol
      mountPath: /app
  volumes:
  - name: myvol
    persistentVolumeClaim:
      claimName: mypvc
