res-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: res
  name: res-pod
spec:
  containers:
  - image: nginx:latest
    name: con1
    ports:
    - containerPort: 80
    resources:
      requests:
        memory: "64Mi"
        cpu: "100m"
      limits:
        memory: "128Mi"
        cpu: "500m"
  - name: con2
    image: tomcat:latest
    ports:
    - containerPort: 80
