secret-pod-vol.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: mango
  name: secret-vol
spec:
  containers:
  - image: nginx:latest
    name: con1
    ports:
    - containerPort: 80
    volumeMounts:
    - name: myvol
      mountPath: /data
  volumes:
  - name: myvol
    secret:
      secretName: mycert
---
