configMap-pod-vol.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: mango
  name: wordpress
spec:
  containers:
  - image: nginx:latest
    name: con1
    ports:
    - containerPort: 80
    volumeMounts:
    - name: myvol
      mountPath: /usr/share/nginx/html
  volumes:
  - name: myvol
    configMap:
      name: myindex
---
apiVersion: v1
kind: Service
metadata:
  name: mywp
spec:
  type: NodePort
  selector:
     app: mango
  ports:
  - port: 80
    nodePort: 30123
