live-exec.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: mango
  name: pod-live-exec
spec:
  containers:
  - image: nginx:latest
    name: con1
    ports:
    - containerPort: 80
    livenessProbe:
      exec:
        command: 
        - cat
        - /etc/hosts123
      initialDelaySeconds: 5
      periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: pod-liveexec-svc
spec:
  selector:
     app: mango
  ports:
  - port: 80
