mysql.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: mydb
  name: mydb
spec:
  containers:
  - image: mysql:5.7
    name: con1
    ports:
    - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: mydb
spec:
  type: ClusterIP
  selector:
     app: mydb
  ports:
  - port: 3306
