pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: mango
  name: wordpress
spec:
  containers:
  - image: nginx:latest
    name: con1
    ports:
    - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: mywp
spec:
  type: NodePort
  selector:
     app: wordpress
  ports:
  - port: 80
    nodePort: 30123
