rc-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-rc
spec:
  type: NodePort
  selector:
     app: myrc
  ports:
  - port: 80
    nodePort: 30123
