readi-exec.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: mango
  name: pod-readi-tcp
spec:
  containers:
  - image: nginx:latest
    name: con1
    ports:
    - containerPort: 80
    readinessProbe:
      exec:
        command:
        - cat 
        - /etc/hosts123
      initialDelaySeconds: 5
      periodSeconds: 5
    livenessProbe:
      exec:
        command:
        - cat
        - /etc/hosts123
      initialDelaySeconds: 5
      periodSeconds: 5
    startupProbe:
      exec:
        command:
        - cat
        - /etc/hosts123
      initialDelaySeconds: 5
      periodSeconds: 5

---
apiVersion: v1
kind: Service
metadata:
  name: pod-readi-exec-svc
spec:
  selector:
     app: mango
  ports:
  - port: 80
