ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mying 
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "abc.com"
    secretName: app-tls
  rules:
  - host: "abc.com"
    http:
      paths:
      - pathType: Prefix
        path: "/shop"
        backend:
          service:
            name: mydep
            port:
              number: 80
  - host: "abc.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: test
            port:
              number: 80
